添加与删除收藏和授权登录

--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
 	"appid": "wxde731706b7cdb51d",
-	"projectname": "wx-project",
+	"projectname": "mini",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
