--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/login/login",
     "pages/index/index",
     "pages/detail/detail",
     "pages/title/title",
@@ -7,6 +8,7 @@
     "pages/mine/mine",
     "pages/readed/readed",
     "pages/library/library"
+    
   ],
   "window": {
     "backgroundTextStyle": "light",
